--- a/index.html
+++ b/index.html
@@ -17,11 +17,13 @@
 
     <header>
 
+        <a href="./index.html">
         <div class="heading">
              <img src="./Images/logo.png" class="logo" alt="Logo">
             <h1 class="heading1">SANTRAGACHI KEDARNATH INSTITUTION</h1>
         </div>
-
+        </a>
+        
         <div class="contactinfo">
         <div class="phone">
             <div class="circle">
