--- a/history.html
+++ b/history.html
@@ -16,10 +16,12 @@
 
     <header>
 
-        <div class="heading">
-             <img src="./Images/logo.png" class="logo" alt="Logo">
-            <h1 class="heading1">SANTRAGACHI KEDARNATH INSTITUTION</h1>
-        </div>
+        <a href="./index.html">
+            <div class="heading">
+                 <img src="./Images/logo.png" class="logo" alt="Logo">
+                <h1 class="heading1">SANTRAGACHI KEDARNATH INSTITUTION</h1>
+            </div>
+            </a>
 
         <div class="contactinfo">
         <div class="phone">
