--- a/sign in/index.html
+++ b/sign in/index.html
@@ -10,18 +10,18 @@
     <div class="imgdiv">
     <img src="../Images/logo.png" alt="">
   </div>
-<form class="box" action="index.html" method="post">
+<form class="box" action="../index.html" method="post">
   <h1>Login</h1>
   <input type="text" name="" placeholder="Username">
   <input type="password" name="" placeholder="Password">
   <input type="submit" name="" value="Login">
 </form>
 
-<a href="../index.html" class="home">
+
   <form>
-    <input type="button" value="Home" onclick="history.back()">
+    <input type="button" value="Back" onclick="history.back()">
    </form>
-  </a>
+  
 </div>
 
   </body>
