--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
         <ul>
         <a href="./index.html"><li>Home</li></a>
         <a href="./history.html"><li>History</li></a>
-        <a href="#"><li>Gallery</li></a>
-        <a href="#"><li>Events</li></a>
-        <a href="#"><li>About Us</li></a>
+        <a href="./gallery.html"><li>Gallery</li></a>
+        <a href="./map.html"><li>Maps</li></a>
+        <a href="./contact_us.html"><li>Contact Us</li></a>
         </ul>
 
         <a href="./sign in/index.html">
@@ -94,6 +94,7 @@
     <!-- SECTION 2 -->
 
     <section class="sec2">
+
         <div class="sect1">
             <img src="./Images/history.jpg" alt="">
             <div class="in2">
@@ -103,33 +104,37 @@
             </a>
             </div>
         </div>
+
         <div class="sect1">
             <img src="./Images/gallery.jpg" alt="">
             <div class="in2">
             <div class="topic">Gallery</div>
-            <a href="#">
+            <a href="./gallery.html">
                 <button>Know more</button>
             </a>
             </div>
         </div>
+
         <div class="sect1">
-            <img src="./Images/events.jpg" alt="">
+            <img src="./Images/map.PNG" alt="">
             <div class="in2">
-            <div class="topic">Events</div>
-            <a href="#">
+            <div class="topic">Map</div>
+            <a href="./map.html">
                 <button>Know more</button>
             </a>
             </div>
         </div>
+
         <div class="sect1">
-            <img src="./Images/mainpic.PNG" alt="">
+            <img src="./Images/contactus.png" alt="">
             <div class="in2">
-            <div class="topic">About us</div>
-            <a href="#">
+            <div class="topic">Contact us</div>
+            <a href="./contact_us.html">
                 <button>Know more</button>
             </a>
             </div>
         </div>
+
     </section>
 
     <!-- FOOTER PART -->
