--- a/contact_us.html
+++ b/contact_us.html
@@ -53,7 +53,7 @@
             <a href="./history.html"><li>History</li></a>
             <a href="./gallery.html"><li>Gallery</li></a>
             <a href="./map.html"><li>Maps</li></a>
-            <a href="#"><li>About Us</li></a>
+            <a href="./contact_us.html"><li>Contact Us</li></a>
             </ul>
     
             <a href="./sign in/index.html">
